icondir = join_paths(get_option('datadir'), 'icons/hicolor')
#pkgicondir = join_paths(get_option('datadir'), 'icons/hicolor')

#install_subdir('hicolor/48x48',
#    install_dir: get_option('datadir'), 'icons', 'hicolor', '48x48', 'apps')


install_data(['hicolor/48x48/apps/org.gnome.dataviewer.png',],
  install_dir: join_paths(icondir, '48x48/apps'))


#install_data(['hicolor/48x48/org.gnome.dataviewer.png'],)

#icons_dir = join_paths(get_option('datadir'), 'icons', 'hicolor', '48x48', 'apps')

#install_data (icons,
#  install_dir: icons_dir,
#)

#mkdir -p ~/.local/share/applications
#sed -e "s#@bindir@#$PWD#" exampleapp.desktop \
#  > ~/.local/share/applications/lt-exampleapp.desktop

#mkdir -p ~/.local/share/icons/hicolor/48x48/apps
#cp exampleapp.png ~/.local/share/icons/hicolor/48x48/apps